# xRPC

./: .gitignore  CMakeLists.txt  README.md  change.md  plan.md
example/: test.conf
example/callee/: CMakeLists.txt  Xserver.cc
example/caller/: CMakeLists.txt  Xclient.cc
src/: CMakeLists.txt  Xrpcapplication.cc  Xrpcchannel.cc  Xrpcconfig.cc  Xrpccontroller.cc  Xrpcheader.proto  Xrpcprovider.cc  zkclientpool.cc  zkconnection.cc  zookeeperutil.cc
src/include/: XrpcLogger.h  Xrpcapplication.h  Xrpcchannel.h  Xrpcconfig.h  Xrpccontroller.h  Xrpcprovider.h  zkclientpool.h  zkconnection.h  zookeeperutil.h
tests/: CMakeLists.txt  Xrpcapplication_test.cc  Xrpcchannel_test.cc  Xrpcconfig_test.cc  Xrpccontroller_test.cc  test_fixture.h  zkclientpool_test.cc  zkconnection_test.cc
